--- a/api-reference/rate-limits.mdx
+++ b/api-reference/rate-limits.mdx
@@ -3,7 +3,7 @@ title: "Rate limits"
 description: "Learn about API rate limits and how to work with them."
 ---
 
-The default API rate limit is 60 requests per minute.
+The default API rate limit is **60 requests per minute**.
 
 We may reduce limits to prevent abuse, or increase limits to enable high-traffic applications. To request an increased rate limit, please contact support.
 
