--- a/api-reference/analyze-text.mdx
+++ b/api-reference/analyze-text.mdx
@@ -1,5 +1,5 @@
 ---
-openapi: post /moderation/text
+openapi: post /moderate/text
 ---
 
 <ResponseExample>
@@ -44,3 +44,4 @@ openapi: post /moderation/text
 </ResponseExample>
 
 
+```
