--- a/content-moderation/analyze-text.mdx
+++ b/content-moderation/analyze-text.mdx
@@ -8,19 +8,16 @@ To analyze text, you need to send a POST request with the text to the [text mode
 ## Example
 
 ```javascript Node.js text analysis example
-const response = await fetch(
-  "https://moderationapi.com/api/v1/moderation/text",
-  {
-    method: "POST",
-    headers: {
-      Authorization: `Bearer ${PROJECT_API_KEY}`,
-    },
-    body: JSON.stringify({
-      value:
-        "You can contact me on mr_robot[at]gmail|DOT|com or call me on 12 34 65 78",
-    }),
-  }
-);
+const response = await fetch("https://moderationapi.com/api/v1/moderate/text", {
+  method: "POST",
+  headers: {
+    Authorization: `Bearer ${PROJECT_API_KEY}`,
+  },
+  body: JSON.stringify({
+    value:
+      "You can contact me on mr_robot[at]gmail|DOT|com or call me on 12 34 65 78",
+  }),
+});
 
 const data = await data.json();
 ```
