--- a/account/quota-usage.mdx
+++ b/account/quota-usage.mdx
@@ -7,7 +7,10 @@ Depending on your plan you have a certain amount of quota. You can see your quot
 
 Each request to your project will use a certain amount of quota. Usually this is 1 quota per request, but some models use more quota. You can see the quota usage per model when you add it to your project.<br />
 
-<Warning>If you run out of quota, the API will respond with an error.</Warning>
+<Warning>
+  If you run out of quota, the API will respond with an error and status code
+  `403`.
+</Warning>
 
 ## Quota period
 
