--- a/content-queues/configuration.mdx
+++ b/content-queues/configuration.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Creating a new content queue"
-sidebarTitle: "Creating a queue and how to configure it"
+sidebarTitle: "Creating a queue"
 ---
 
 To create a new queue you can press the plus button in side bar on the queue dashboard or simply [go to the page here](https://moderationapi.com/app/moderation/new).
