--- a/content-queues/actions.mdx
+++ b/content-queues/actions.mdx
@@ -24,6 +24,8 @@ We recommend using actions for things like removing content from your platform, 
 
 Actions can be configured to resolve the item when the action is executed. This means that the item will be removed from the queue when the action is executed.
 
+This is mainly for to make it faster for moderators, so they don't have to resolve the item after executing the action.
+
 ## Adding a value to an action
 
 You can add a value to an action. This value can be used to add a reason for the action, or to add a duration for a ban etc. <br></br>
