--- a/content-queues/overview.mdx
+++ b/content-queues/overview.mdx
@@ -21,11 +21,13 @@ The moderation queue is a streamlined way to manually moderate content. It's an 
   </Step>
   <Step title="Take actions">
     The queue is a list of content that needs to be moderated. You can take
-    actions on the content, such as approving or rejecting it.
+    [actions](/content-queues/actions) on the content, such as approving or
+    rejecting it.
   </Step>
   <Step title="Resolve content">
-    The goal is to resolve all content in the queue. Once all content is
-    resolved, the queue is empty.
+    The goal is to [resolve](/content-queues/using-queues#resolving-content) all
+    content in the queue. Once all content is resolved, the queue is empty.
+    Items can be resolved by certain actions or by resolving them manually.
   </Step>
 </Steps>
 
