--- a/get-started/introduction.mdx
+++ b/get-started/introduction.mdx
@@ -4,7 +4,7 @@ description: "Explore our guides and examples to integrate Moderation API."
 ---
 
 <Frame>
-  <img className="block " src="/images/intro.png" alt="Intro img" />
+  <img className="block " src="/images/intro.webp" alt="Intro img" />
 </Frame>
 
 Moderation API is a full stack content moderation solution that helps you streamline your content moderation. You get state-of-the-art AI models for automated content moderation, a full-featured moderation dashboard for manual moderation, analytics for your content, and cutomizable workflows to integrate with your platform.
