--- a/custom-models/overview.mdx
+++ b/custom-models/overview.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Custom models"
 sidebarTitle: "Overview"
-description: "Create custom models tailored to your specific needs and improve accuracy for special use cases."
+description: "Create custom models in the dashboard. Tailored to your specific needs and improve accuracy for special use cases."
 ---
 
 <Frame type="glass">
@@ -28,6 +28,14 @@ Training a custom model may seem daunting at first, but the workflow is userfrie
 - Improve models over time with self-learning
 - Classify your data with new labels
 - Bake all your policies into a single model
+
+<Card
+  title="Guide to create a model"
+  icon="sparkles"
+  href="/custom-models/creating-a-model"
+>
+  Create a model in less than 15 minutes in the dashboard.
+</Card>
 
 ## How it works
 
