--- a/get-started/introduction.mdx
+++ b/get-started/introduction.mdx
@@ -25,23 +25,66 @@ Can't find your use case? [Contact us](https://moderationapi.com/sales) and we'l
 
 <CardGroup cols={2}>
   <Card title="Quickstart" icon="rocket" href="/get-started/quickstart">
-    Automate your content moderation in 5 minutes.
-  </Card>
-  <Card title="Design a workflow" icon="arrows-split-up-and-left">
-    Learn how to design a moderation workflow and integrate it on your platform.
-  </Card>
-  <Card title="Moderation for chats" icon="comments">
-    Automatically moderate chats in real-time.
-  </Card>
-  <Card title="Moderation for marketplaces" icon="shop">
-    Detect intent to circumvent platform fees and remove illegal listings.
+    Get started with content moderation in 5 minutes.
   </Card>
 
-<Card title="Handle user flagged content" icon="flag">
-  Allow users to flag content and handle it in your moderation flow.
+<Card title="Automate your moderation" icon="bolt" href="/content-moderation">
+  Automate your moderation with the API.
 </Card>
-<Card title="Self-learning AI models" icon="sparkles">
-  Combine human and AI moderation to create self-learning models.
+
+<Card title="Using review queues" icon="list" href="/content-queues">
+  Learn how to use review queues to moderate content.
 </Card>
+
+<Card title="AI agents" icon="robot" href="/ai-agents">
+  Using AI agents to help you moderate.
+</Card>
+
+
+<Card title="Ready-made models" icon="cube" href="/models/overview">
+  Get an overview of the ready-made models available.
+</Card>
+
+
+
+
+
+
+<Card title="Creating a custom model" icon="sparkles" href="/custom-models">
+  Learn how to create a custom model in the dashboard.
+</Card>
+
+
+
+
+
+
+
 
 </CardGroup>
+
+{/* <Card title="Design a workflow" icon="arrows-split-up-and-left" href="/guides/moderation-workflow">
+Learn how to design a moderation workflow and integrate it on your platform.
+
+</Card>
+<Card title="Moderation for chats" icon="comments" href="/guides/chat-content-moderation">
+  Automatically moderate chats in real-time.
+</Card>
+<Card title="Moderation for marketplaces" icon="shop" href="/guides/marketplace-content-moderation">
+  Detect intent to circumvent platform fees and remove illegal listings.
+</Card>
+
+<Card
+  title="Handle user flagged content"
+  icon="flag"
+  href="/guides/user-flagged-content"
+>
+  Allow users to flag content and handle it in your moderation flow.
+</Card>
+<Card
+  title="Self-learning AI models"
+  icon="sparkles"
+  href="/guides/self-learning"
+>
+  Combine human and AI moderation to create self-learning models.
+</Card> */}
