--- a/content-moderation/flagging-thresholds.mdx
+++ b/content-moderation/flagging-thresholds.mdx
@@ -70,7 +70,7 @@ If any of the models exceeds their respective threshold, the `flagged` field wil
 
 We recommend to use the `flagged` field in your application code to make decisions about the content. That way, you can change the flagging threshold without having to change your application code. <br></br>
 
-Next, when using [content queues](/content-queues/overview), you can filter the content based on the `flagged` field. By default only flagged content enters the queue.
+Next, when using [review queues](/review-queues/overview), you can filter the content based on the `flagged` field. By default only flagged content enters the queue.
 
 ### Flagging for recognizer models
 
