--- a/custom-models/overview.mdx
+++ b/custom-models/overview.mdx
@@ -64,7 +64,7 @@ If you don't have any data to upload, you can start collecting it today with Mod
 
 ## Self-learning models
 
-Custom models are self-learning, which means that they will improve over time as you use them. This is done by using the [content queue](/content-queues) and correcting the model when it makes a mistake.
+Custom models are self-learning, which means that they will improve over time as you use them. This is done by using the [review queue](/review-queues) and correcting the model when it makes a mistake.
 
 ## Need help getting started?
 
