--- a/get-started/concepts.mdx
+++ b/get-started/concepts.mdx
@@ -40,20 +40,20 @@ Models are used to analyze content. You can add multiple models to a project. Ea
 | **AI agents**         | No                  | No            | ✅           | Medium   | Medium |
 | **Custom models**     | ✅                  | ✅            | ✅           | High     | High   |
 
-## Content queues
+## Review queues
 
 <Note>
   The queues are optional to use, but they are useful as your own customizable
   moderation dashboard.
 </Note>
 
-Content queues are used to manually review and act on content submitted to your projects. You can create multiple queues and configure what content you want in a queue by setting up filters. <br></br>
+Review queues are used to manually review and act on content submitted to your projects. You can create multiple queues and configure what content you want in a queue by setting up filters. <br></br>
 
-How you use the content queue is up to you. For example, you can use it to review content before it is published, or to review content that has already been published. <br></br>
+How you use the review queue is up to you. For example, you can use it to review content before it is published, or to review content that has already been published. <br></br>
 
 ## Queue actions
 
-When you review content in the content queue, you can take actions on the content. <br></br>
+When you review content in the review queue, you can take actions on the content. <br></br>
 
 You can create your own custom actions and assign them to the queues you want. <br></br>
 
@@ -66,7 +66,7 @@ Actions can be used to, for example, delete content, block a user, send content 
   your own models when you use the self-learning feature.
 </Warning>
 
-You can use the content queue to train and improve your custom models. For example, you can use the content queue to review content that has been flagged by a model, and then use the feedback to improve your models. <br></br>
+You can use the review queue to train and improve your custom models. For example, you can use the review queue to review content that has been flagged by a model, and then use the feedback to improve your models. <br></br>
 
 ## Quota
 
