--- a/get-started/introduction.mdx
+++ b/get-started/introduction.mdx
@@ -32,7 +32,7 @@ Can't find your use case? [Contact us](https://moderationapi.com/sales) and we'l
   Automate your moderation with the API.
 </Card>
 
-<Card title="Using review queues" icon="list" href="/content-queues">
+<Card title="Using review queues" icon="list" href="/review-queues">
   Learn how to use review queues to moderate content.
 </Card>
 
@@ -40,30 +40,17 @@ Can't find your use case? [Contact us](https://moderationapi.com/sales) and we'l
   Using AI agents to help you moderate.
 </Card>
 
-
 <Card title="Ready-made models" icon="cube" href="/models/overview">
   Get an overview of the ready-made models available.
 </Card>
-
-
-
-
-
 
 <Card title="Creating a custom model" icon="sparkles" href="/custom-models">
   Learn how to create a custom model in the dashboard.
 </Card>
 
-
-
-
-
-
-
-
 </CardGroup>
 
-{/* <Card title="Design a workflow" icon="arrows-split-up-and-left" href="/guides/moderation-workflow">
+{/\* <Card title="Design a workflow" icon="arrows-split-up-and-left" href="/guides/moderation-workflow">
 Learn how to design a moderation workflow and integrate it on your platform.
 
 </Card>
