--- a/get-started/quickstart.mdx
+++ b/get-started/quickstart.mdx
@@ -86,12 +86,12 @@ Content that is flagged by the model will be sent to the **Content Queue**. This
 <Frame>
   <img
     className="block "
-    src="/images/content-queue.png"
-    alt="Content queue for reviewing and improving automated moderation"
+    src="/images/review-queue.png"
+    alt="Review queue for reviewing and improving automated moderation"
   />
 </Frame>
 
-The content queue can be used for a variety of use cases:
+The review queue can be used for a variety of use cases:
 
 - **Human moderation** - Review content that is flagged by the model and decide whether to block or allow the content.
 - **Improve custom models** - Review content that is flagged by the model and provide feedback to the model. This will help the model learn and improve over time.
