--- a/review-queues/actions.mdx
+++ b/review-queues/actions.mdx
@@ -7,8 +7,8 @@ description: "Learn how to use actions to moderate content and users"
 <Frame>
   <img
     className="block "
-    src="/images/content-queue-list.png"
-    alt="Content queue for reviewing and improving automated moderation"
+    src="/images/review-queue-list.png"
+    alt="Review queue for reviewing and improving automated moderation"
   />
 </Frame>
 
@@ -32,4 +32,4 @@ You can add a value to an action. This value can be used to add a reason for the
 
 ## Integrating actions
 
-To integrate actions in your application you can use [webhooks](/content-queues/webhooks) or use one of our [platform plugins](https://moderationapi.com/integrations).
+To integrate actions in your application you can use [webhooks](/review-queues/webhooks) or use one of our [platform plugins](https://moderationapi.com/integrations).
