--- a/review-queues/end-users.mdx
+++ b/review-queues/end-users.mdx
@@ -6,14 +6,14 @@ sidebarTitle: "End users"
 <Frame>
   <img
     className="block "
-    src="/images/content-queue-users.png"
-    alt="Users in Content queue, automated moderation"
+    src="/images/review-queue-users.png"
+    alt="Users in Review queue, automated moderation"
   />
 </Frame>
 The [moderation endpoint](/api-reference) allows you to submit an `authorId` to associate
 the content with a user. This will allow you to view all the content submitted by
 a specific user in the moderation queue. You can also take actions on specific users,
-such as banning them from your platform using a [custom action](/content-queues/actions).
+such as banning them from your platform using a [custom action](/review-queues/actions).
 
 All users can be viewed in the dashboard under the users tab. Here you can sort by the number of content items submitted by each user, or check the score of each user. <br></br>
 
