--- a/review-queues/overview.mdx
+++ b/review-queues/overview.mdx
@@ -1,14 +1,14 @@
 ---
-title: "Content queues"
+title: "Review queues"
 sidebarTitle: "Overview"
-description: "What are content queues and how do they work?"
+description: "What are review queues and how do they work?"
 ---
 
 <Frame>
   <img
     className="block "
-    src="/images/content-queue.png"
-    alt="Content queue for reviewing and improving automated moderation"
+    src="/images/review-queue.png"
+    alt="Review queue for reviewing and improving automated moderation"
   />
 </Frame>
 
@@ -21,17 +21,17 @@ The moderation queue is a streamlined way to manually moderate content. It's an 
   </Step>
   <Step title="Take actions">
     The queue is a list of content that needs to be moderated. You can take
-    [actions](/content-queues/actions) on the content, such as approving or
+    [actions](/review-queues/actions) on the content, such as approving or
     rejecting it.
   </Step>
   <Step title="Resolve content">
-    The goal is to [resolve](/content-queues/using-queues#resolving-content) all
+    The goal is to [resolve](/review-queues/using-queues#resolving-content) all
     content in the queue. Once all content is resolved, the queue is empty.
     Items can be resolved by certain actions or by resolving them manually.
   </Step>
 </Steps>
 
-#### Some of the things you can do with content queues:
+#### Some of the things you can do with review queues:
 
 - Review content before it's published
 - Perform a manual review of content that was automatically rejected
