--- a/review-queues/webhooks.mdx
+++ b/review-queues/webhooks.mdx
@@ -3,7 +3,7 @@ title: "Webhooks"
 sidebarTitle: "Webhooks"
 ---
 
-You can set up webhooks for common events and actions from the [moderation queue](/content-queues/overview). This is useful if you want to integrate the queue with your own systems. Webhooks are configured under [integrations in your dashboard](https://moderationapi.com/app/moderation/integrations)<br></br>
+You can set up webhooks for common events and actions from the [moderation queue](/review-queues/overview). This is useful if you want to integrate the queue with your own systems. Webhooks are configured under [integrations in your dashboard](https://moderationapi.com/app/moderation/integrations)<br></br>
 
 The webhook payload will be sent as a `POST` request to the URL you specify. <br></br>
 
